# CVATTools

./: .clang-format  CMakeLists.txt  LICENSE  Readme.md
CVATTools/: CMakeLists.txt  CVATTools.cpp  CVATTools.h
